language/tests/compile_fail/invalid_inline_task4.lg
-- Copyright 2015 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- invalid_inline_task4.lg:23: inline tasks cannot have a parameter of type region(int32)
-- task f(r : region(int))
--        ^

import "legion"

__demand(__inline)
task f(r : region(int))
where reads(r) do
  var x = 0
  for e in r do
    x = x + @e
  end
end

task main()
  var r = region(int, 10)
  for i = 0, 10 do
    var p = new(ptr(int, r))
    @p = i
  end

  f(r)
end

legionlib.start(main)
